k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: matric-api
  labels:
    name: matric-api
    app.kubernetes.io/name: matric-api
