k8s/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: matric-api-nodeport
  namespace: matric-api
spec:
  type: NodePort
  selector:
    app: matric-api
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30080
